--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     <meta name="twitter:title" content="Compelling Title for Social Sharing"> 
     <meta name="twitter:description" content="A concise, compelling description for social media sharing (usually 2-4 sentences)."> 
     <meta name="twitter:image" content="https://teal-right-clownfish-557.mypinata
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TRZ7QJD0EG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TRZ7QJD0EG');
+</script>
 </head>
 <body>
     <header>
